[package]
name = "trade_vision"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unofficial API for TradingView"
homepage = "https://github.com/Hysterelius/trade_vision"
repository = "https://github.com/Hysterelius/trade_vision"
documentation = "https://docs.rs/trade_vision/latest/trade_vision/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.2.0"
serde_json = "1.0.91"
tungstenite = {version = ">0.19.0", features = ["rustls-tls-native-roots"]}
tokio-tungstenite = {version = ">0.19.0", features = ["rustls-tls-native-roots"]}
http = "1.3.1"
rand = "0.9.2"
futures-util = "0.3.25"

[lints.clippy]
pedantic = "warn"
nursery = "warn"